# context-memory

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.py  pyproject.toml  test_bugfixes.py  uninstall.py
.claude-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
commands/: recall.md  remember.md
hooks/: hooks.json
skills/context-memory/: SKILL.md
skills/context-memory/references/: schema-reference.md
skills/context-memory/scripts/: __init__.py  auto_save.py  dashboard.py  db_init.py  db_prune.py  db_save.py  db_search.py  db_utils.py  mcp_server.py  pre_compact_save.py
skills/context-memory/scripts/static/: index.html
skills/context-memory/scripts/static/css/: dashboard.css
skills/context-memory/scripts/static/js/: api.js  app.js
skills/context-memory/scripts/static/js/components/: charts.js  code-block.js  modal.js  session-card.js  toast.js
skills/context-memory/scripts/static/js/views/: analytics.js  detail.js  search.js  sessions.js  settings.js
tests/: conftest.py  test_auto_save.py  test_dashboard.py  test_db_init.py  test_db_prune.py  test_db_save.py  test_db_search.py  test_db_utils.py  test_install.py  test_integration.py  test_mcp_server.py  test_pre_compact_save.py  test_uninstall.py
